updated at eight thirty

--- a/myFirstHtml.html
+++ b/myFirstHtml.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My first page in Git</title>
+	<title>Guru Guruparan</title>
+	<meta charset="utf-8">
+
+	<style type="text/css">
+		h1 {
+			background-color: black;
+			color: white;
+			text-align: center;
+		}
+
+		h2 {
+			text-align: center;
+			font-family: sans-serif;
+			color: red;
+		}
+
+		h3 {
+			font-family: sans-serif;
+			color: blue;
+		}
+	</style>
 </head>
 <body>
-	<h1>This is a heading</h1>
-	<img src="https://s-media-cache-ak0.pinimg.com/originals/86/ad/84/86ad849000af3daceef9dada4f6c1100.jpg" alt="Spider Monkey">
+	<div>
+		<h1>Student Bio</h1>
+		<h2>Guru Guruparan</h2>	
+		<img src="https://s-media-cache-ak0.pinimg.com/originals/86/ad/84/86ad849000af3daceef9dada4f6c1100.jpg" alt="Spider Monkey" width="300" length="300">
+	</div>
+	<p>
+		Product & Program management expert providing business process and product strategy consulting services 
+		<br>
+		Led Scrum teams developing SW using Agile methodology; coached engineers on benefits of Agile and Scrum
+	</p>
+	<h3>Contact Info</h3>
+	<ol>
+		<li>Email:<a href="mailto:cns_guru@yahoo.com">cns_guruATyahooDOTcom</a></li>
+		<li>Github:<a href="#">mullun</a></li>
+		<li>Portfolio: <a href="#">Coming Soon</a></li>
+	</ol>
 	<b><a href="https://www.google.com" target="_blank">Link to Google</a></b>
 </body>
 </html>
